# Crypto_AML

./: .gitignore  package-lock.json  package.json  start.bat  start.sh
AML/: README.md  pyproject.toml  requirements.txt
AML/schemas/: mariadb_tables.sql  neo4j_queries.cypher
AML/tests/: test_placement_detection.py
Wallet Analysis/CryptoCurrency-Spam-Detection--frontend/Blockchain/: README.md  pyproject.toml
Wallet Analysis/CryptoCurrency-Spam-Detection--frontend/Blockchain/blockchain_engine/: __init__.py  alerts.py  api.py  config.py  detectors.py  explorer.py  graph_analysis.py  indexer.py  models.py  network.py  public_feeds.py  registry.py  risk_engine.py  scanner.py  watchlist.py
Wallet Analysis/CryptoCurrency-Spam-Detection--frontend/Blockchain/blockchain_engine/connectors/: __init__.py  base.py  bitcoin.py  evm.py  solana.py
Wallet Analysis/CryptoCurrency-Spam-Detection--frontend/Blockchain/blockchain_engine/data/: alerts.json  bitcoin_abuse.json  blockchain_index.db  blockchain_index.db-shm  blockchain_index.db-wal  flagged_addresses.json  ofac_sanctions.json  ransomware_feeds.json  watchlist.json
Wallet Analysis/CryptoCurrency-Spam-Detection--frontend/Blockchain/blockchain_engine/scripts/: __init__.py  check_connectors.py  manage_watchlist.py  run_alerts.py  run_anomaly_detection.py  run_api_server.py  run_cross_chain_scan.py  run_explorer.py  run_graph_analysis.py  run_scan.py  run_wallet_screening.py  sync_public_feeds.py
crypto-aml-tracker/: .env  index.html  package-lock.json  vite.config.js
tools/: insert_layering_mocks.py
(+142 files in other folders)
