[project]
name = "blockchain-engine"
version = "0.1.0"
description = "Blockchain integration and risk analysis module for the crypto spam detection project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.0",
]

[project.optional-dependencies]
evm = [
    "web3>=7.0.0",
]
bitcoin = [
    "bitcoinlib>=0.7.0",
]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["blockchain_engine*"]
